Fixed line-numbers alignment with code Not sure if this works for every font denomination but works fine on this computer

--- a/app/assets/stylesheets/post/post.scss
+++ b/app/assets/stylesheets/post/post.scss
@@ -82,8 +82,6 @@
         display: block;
         max-width: 900px;
         margin: 0 auto 0 100px;
-        font-size: 1.1em;
-        line-height: 1.2em;
       }
     }
   }
