--- a/app/assets/stylesheets/post/prism.scss
+++ b/app/assets/stylesheets/post/prism.scss
@@ -132,6 +132,7 @@ pre.line-numbers > code {
 	pointer-events: none;
 	top: 0;
 	font-size: 100%;
+  line-height: 1.35rem;
 	left: -3.8em;
 	width: 3em; /* works for line-numbers below 1000 lines */
 	letter-spacing: -1px;
